--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A simple starter to get up and developing quickly with Gatsby",
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "resolutions": {
+    "source-map": "^0.8.0-beta.0"
+  },
   "dependencies": {
     "gatsby": "^3.13.1",
     "gatsby-plugin-image": "^1.13.0",
@@ -18,7 +21,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "source-map": "^0.8.0-beta.0"
   },
   "devDependencies": {
     "prettier": "2.4.1"
