--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "gatsby-source-contentful": "^5.14.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby-video": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.3.1",
-    "source-map": "^0.8.0-beta.0"
+    "source-map": "^0.8.0-beta.0",
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
     "prettier": "2.4.1"
