--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.32.2",
     "source-map": "^0.8.0-beta.0",
     "styled-components": "^5.3.1"
   },
