--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
     "gatsby-video": "^0.2.0",
+    "locomotive-scroll": "^4.1.4",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.32.2",
+    "react-locomotive-scroll": "^0.2.0",
+    "react-spring": "^9.4.5",
     "source-map": "^0.8.0-beta.0",
     "styled-components": "^5.3.1"
   },
